src/test/deca/syntax/invalid/test10_float.deca
// Description:
//    Programme testant un flottant invalide.
//	  Etape(s) : A et B
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//
// Resultats:
//    test_lex : pas d'erreur
//    test_synt : erreur ligne 16 : un flottant doit 
//		avoir un exposant non vide : no viable alternative at input 'e'
//
// Historique:
//    cree le 10/01/2021

{
	print(12.0e);
}
